# cuda-note

./: README.md
1/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
